--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,30 @@
 
+<h1>Select input</h1>
+
 <app-select-animal></app-select-animal>
 
 <br />
+
+<h1>Autocompleted input</h1>
 
 <app-autocomplete></app-autocomplete>
 
 
 <br />
 
+<h1>Custom autocompletion input </h1>
+
 <app-autocompleted-input></app-autocompleted-input>
 
 <br />
 
+<h1>DSL input</h1>
+
+<app-dsl-input></app-dsl-input>
+
+<br />
+
+<h1>Custom input with DSL</h1>
 
 <app-animals></app-animals>
 
