--- a/src/app/dls-autocomplete/dsl-autocomplete.component.html
+++ b/src/app/dls-autocomplete/dsl-autocomplete.component.html
@@ -1,9 +1,9 @@
 <form class="antlr-autocomplete-form">
   <mat-form-field appearance="fill">
-    <mat-label>What does the...</mat-label>
+    <mat-label>Start typing..</mat-label>
     <input
       type="text"
-      placeholder="Pick one"
+      placeholder="..to autocomplete"
       aria-label="Animals"
       matInput
       [matAutocomplete]="antlrAuto"
