--- a/src/app/autocompleted-input/autocompleted-input.component.html
+++ b/src/app/autocompleted-input/autocompleted-input.component.html
@@ -1,7 +1,1 @@
-<!--
-<form class="antlr-autocomplete-form">
-  <mat-form-field appearance="fill">
-    <mat-label>What does the...</mat-label> -->
-    <app-antlr-autocomplete [parseString]="parseString"></app-antlr-autocomplete>
-<!-- </mat-form-field>
-</form> -->
+<app-dsl-autocomplete [parseString]="parseString"></app-dsl-autocomplete>
